--- a/src/components/appHeaderMainPage/app-header-main-page.scss
+++ b/src/components/appHeaderMainPage/app-header-main-page.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
-
 .app-header__main-page{
     display: flex;
     margin: 0 auto;    
@@ -9,17 +7,18 @@
     .logo{
         width: 150px;
         height: 70px;
+        margin-left: 10px;
+        margin-top: 10px;
         fill: #ffb701;
     }
     .email_ico{
         width: 30px;
         height: 30px;
+        margin-top: 5px;
         
     }
     .address{
-        margin: 0 auto;
-        margin-top: 35px;
-        width: 200px;
+        margin: 25px 325px 0 415px;
         display: flex;
     }
     a{
@@ -33,12 +32,14 @@
 
     }
     p{
+        width: 100%;
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
         line-height: 16px;
         color: #898088;
-   
+        margin: 0 0 0 13px;
     }
+
 }
