--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
 
+*,
+*:after,
+*:before {
+  margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box; 
+	}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -50,4 +60,12 @@
   text-transform: uppercase;
   color: #262C34;
   border: none;
+}
+
+.col-left__main{
+  width: 25%;
+}
+
+.col-right__main{
+  width: 75%;
 }
