--- a/src/components/appHeaderMainPage/app-header-main-page.scss
+++ b/src/components/appHeaderMainPage/app-header-main-page.scss
@@ -4,6 +4,11 @@
     width: 1600px;
     height: 84px;
     background: #262C34;
+    .container{
+        width: 1280px;
+        margin: 0 auto;
+        position: relative;
+      }
     .logo{
         width: 150px;
         height: 70px;
