--- a/src/components/questionAnswer/question-answer.scss
+++ b/src/components/questionAnswer/question-answer.scss
@@ -1,5 +1,10 @@
 .question-answer{
     margin-top: 70px;
+    .container{
+        width: 1280px;
+        margin: 0 auto;
+        position: relative;
+      }
     .head__question-answer{
         display: flex;
     }
