--- a/src/components/cart-menu/cart-menu.scss
+++ b/src/components/cart-menu/cart-menu.scss
@@ -6,6 +6,11 @@
     border-radius: 10px;
     list-style-type: none;
     padding: 15px 0 0 20px;
+    .container{
+        width: 1280px;
+        margin: 0 auto;
+        position: relative;
+      }
     a{
         text-decoration: none;
         font-family: 'Ubuntu';
