--- a/src/components/offerDay/offer-day.scss
+++ b/src/components/offerDay/offer-day.scss
@@ -5,6 +5,11 @@
     background: #FFB701;
     box-shadow: 0px 7px 29px rgba(255, 183, 1, 0.15);
     border-radius: 10px;
+    .container{
+        width: 1280px;
+        margin: 0 auto;
+        position: relative;
+      }
     h2{
         width: 180px;
         height: 51px;
