--- a/src/components/pages/cart/cart.scss
+++ b/src/components/pages/cart/cart.scss
@@ -9,3 +9,8 @@ h1{
     display: flex;
     align-items: center;
 }
+.container{
+    width: 1280px;
+    margin: 0 auto;
+    position: relative;
+  }
