--- a/src/components/productsList/products-list.scss
+++ b/src/components/productsList/products-list.scss
@@ -2,7 +2,11 @@
     display: flex;
     list-style-type: none;
     margin-top: 39px;  
- 
+    .container{
+        width: 1280px;
+        margin: 0 auto;
+        position: relative;
+      }
     a{
         text-decoration: none;
         font-family: 'Ubuntu';
@@ -55,7 +59,7 @@
     list-style-type: none;
     padding-top: 49px;
     .product{
-        width: 922px;
+        width: 952px;
         height: 269px;
         display: flex;
         margin-top: 16px;
@@ -70,7 +74,7 @@
             margin: 23px 0 0 20px;
 
             h2{
-                width: 304px;
+                width: 490px;
                 height: 46px;
                 font-family: 'Ubuntu';
                 font-style: normal;
@@ -107,7 +111,7 @@
             }
         }
         .panel-product{
-            margin: 30px 0 0 55px;
+            margin: 30px 0 0 0px;
             .price-product{
                 width: 200px;
                 margin: 0 auto;
