--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,81 @@ code {
 .container{
   width: 1280px;
   margin: 0 auto;
-
   position: relative;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
+
+*,
+*:after,
+*:before {
+  margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box; 
+	}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+.call-me__btn{
+  width: 193px;
+  height: 42px;
+  margin-top: 20px;
+  background: #FFB701;
+  border-radius: 5px;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #262C34;
+  border: none;
+}
+
+.row{
+  display: flex;
+}
+
+.col-left__main{
+  width: 25%;
+}
+
+.col-right__main{
+  width: 75%;
 }
