--- a/src/components/productsList/products-list.scss
+++ b/src/components/productsList/products-list.scss
@@ -20,8 +20,9 @@
     }
     li, img{
         margin-left: 4px;
-
+      
     }
+
  
     h2{
         margin-top: 12px;
@@ -92,6 +93,8 @@
             width: 250px;
             margin-left: 10px;
             cursor: pointer;
+            object-fit: contain;
+            
         }
         .about-product{
             margin: 23px 0 0 20px;
