--- a/src/components/productsList/products-list.scss
+++ b/src/components/productsList/products-list.scss
@@ -86,6 +86,7 @@
         height: 269px;
         display: flex;
         margin-top: 16px;
+      
         background: #FFFFFF;
         box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
         border-radius: 10px;
@@ -101,7 +102,7 @@
 
             h2{
                 width: 490px;
-                height: 46px;
+                min-height: 26px;
                 font-family: 'Ubuntu';
                 font-style: normal;
                 font-weight: 600;
@@ -117,7 +118,7 @@
                 width: 387px;
                 position: relative;
                 display: block;
-                max-height: 162px;
+                max-height: 145px;
                 margin-top: 16px;
                 overflow: hidden;
                 display: -webkit-box;
@@ -142,7 +143,7 @@
             }
         }
         .panel-product{
-            margin: 50px 0 0 0px;
+            margin: 20px 0 0 0px;
             .price-product{
                 width: 185px;
                 margin: 0 auto;
@@ -216,4 +217,25 @@
 
       
     }
+}
+
+.show-more__btn{
+    width: 952px;
+    height: 60px;
+    margin-top: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #313131;
+}
+
+.show-more__btn:hover{
+    color: #FFB701;
 }
