--- a/src/components/cartProducts/cart-products.scss
+++ b/src/components/cartProducts/cart-products.scss
@@ -60,6 +60,7 @@
         button{
             background-color: #fff;
             border: none;
+            cursor: pointer;
         }
         .count{
             font-family: 'Ubuntu';
