--- a/src/components/productConditionerProtection/aboutProduct/description/description.scss
+++ b/src/components/productConditionerProtection/aboutProduct/description/description.scss
@@ -42,6 +42,7 @@
                 background-color: #FFFFFF;
                 border: none;
                 width: 150px;
+                cursor: pointer;
             }
             span{
                 margin-left: 10px;
