--- a/src/components/productsList/products-list.scss
+++ b/src/components/productsList/products-list.scss
@@ -195,8 +195,11 @@
                 }
             }
             .count-product{
+                margin: 0 auto;
                 margin-top: 15px;
+          
                 img{
+                    margin: 0;
                     width: 38px;
                 }
                 .count{
