--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -82,3 +82,13 @@
 button{
   cursor: pointer;
 }
+
+.btn_sub{
+  
+  width: 330px;
+  height: 40px;
+  margin-top: 10px;
+  background: #FFB701;
+  border: none;
+  border-radius: 5px;
+}
