--- a/src/components/catalogMenu/catalog-menu.scss
+++ b/src/components/catalogMenu/catalog-menu.scss
@@ -8,7 +8,8 @@
     padding: 20px;
     box-shadow: 0px 7px 29px rgba(100, 100, 111, 0.1);
     border-radius: 10px;
-    margin: 39px 0 0 15px;
+    margin: 39px 0 0 0px;
+    z-index: 3;
     .container{
         width: 1280px;
         margin: 0 auto;
@@ -29,11 +30,13 @@
         transform: rotate(270deg);
     }
     .grids{
-        top: 10px;
+        top: -19px;
+        left: 235px;
         width: 150px;
     }
     .conditioning{
-        top: 40px;
+        top: -10px;
+        left: 235px;
         width: 105px;
         .li{
             margin-top: 10px;
@@ -44,7 +47,8 @@
             display: block;
         }
     }
-    a:hover{
+    .tab__catalog-menu:hover, a:hover{
+        cursor: pointer;
         color: #FFB701;
     }
 
@@ -57,6 +61,7 @@
         width: 250px;
         display: flex;
         height: 18px;
+        position: relative;
         ul{
 
             li{
@@ -77,6 +82,8 @@
  
     }
     a{
+        position: absolute;
+        width: 250px;
         margin-bottom: 15px;
         text-decoration: none;
         font-family: 'Ubuntu';
@@ -95,5 +102,10 @@
     .subsection-link__catalog-menu{
         margin-top: 5px;
         font-size: 14px;
+    }
+    .active{
+        a{
+            color:#FFB701;
+        }
     }
 }
