--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -11,20 +11,27 @@
         display: flex;
         flex-direction: column;
         width: 233px;
-        height: 42px;
-
+        min-height: 42px;
+        padding-bottom: 10px;
         margin-top: 10px;
         background: #FFFFFF;
         box-shadow: 0px 7px 29px rgba(100, 100, 111, 0.1);
         border-radius: 10px;
         list-style-type: none;
-        .head-filter{
+        .head-filter, .click-filter{
             display: flex;
             justify-content: space-around;
             width: 192px;
             height: 42px;
             margin: 0 20px 0 20px;
+            cursor: pointer;
             h3{
+                -webkit-touch-callout: none; /* iOS Safari */
+                -webkit-user-select: none; /* Safari */
+                 -khtml-user-select: none; /* Konqueror HTML */
+                   -moz-user-select: none; /* Old versions of Firefox */
+                    -ms-user-select: none; /* Internet Explorer/Edge */
+                        user-select: none;
                 font-family: 'Ubuntu';
                 font-style: normal;
                 font-weight: 500;
@@ -38,7 +45,50 @@
                 width: 15px;
             }
         }
+        .range{
+            padding:  0 20px;
+        }
 
     }
-   
+    .filter-range{
+      display: none;
+        .inputs-filter{
+            display: flex;
+            justify-content: space-around;
+            padding: 9px 0 9px 9px;
+            label{
+                font-family: 'Ubuntu';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 18px; 
+                color: #FFB701;
+            }
+            .input-filter{
+                width: 65px;
+                height: 28px;
+                background: #F9F9F9;
+                border: 0.5px solid #FFCA45;
+                border-radius: 2px;
+                margin: 0;
+                font-family: 'Ubuntu';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 17px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: #9E9E9E;
+            }
+             
+            
+        }
+    }
+    .active{
+        display: block;
+    }
+    .rotate{
+        transform: rotate(180deg);
+    }
 }
