--- a/src/components/productFlag/aboutProduct/description/description.scss
+++ b/src/components/productFlag/aboutProduct/description/description.scss
@@ -1,6 +1,6 @@
 .description{
     width: 922px;
-    min-height: 600px;
+    min-height: 700px;
     background: #FFFFFF;
     box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
     border-radius: 10px;
@@ -12,9 +12,9 @@
     .control-prev.control-arrow:before{
         border-right: 8px solid #000000;
     }
-    .carousel{
+    .carousel-slide{
         width: 461px;
-        height: 500px;
+  
         margin-top: 20px;
         .slide{
             img{
@@ -61,9 +61,13 @@
             }
         }
     }
+    .carousel:last-child{
+        height: 400px;
+    }
     .definition{
         padding: 27px 40px 40px 34px;
-        .definition__description{
+        max-width: 100%;
+        .definition__description {
             width: 387px;
             min-height: 240px;
             font-family: 'Ubuntu';
@@ -72,7 +76,17 @@
             font-size: 16px;
             line-height: 18px;
             color: #313131;
-        }
+            word-wrap: break-word;
+ 
+            .supports-brend{
+                display: flex;
+                flex-direction: column;
+                font-size: 14px;
+                font-weight: bold;
+            }
+
+          }
+          
         .panel-product{
             margin: 30px 0 0 0px;
              
