--- a/src/components/searchHeader/search-header.scss
+++ b/src/components/searchHeader/search-header.scss
@@ -17,7 +17,7 @@
     font-size: 20px;
     line-height: 23px;
     align-items: center;
-    color: #9CA7B5;
+    color: white;
 }
 .search-input::placeholder{
     font-family: 'Ubuntu';
