--- a/src/components/appHeaderMainPage/app-header-main-page.scss
+++ b/src/components/appHeaderMainPage/app-header-main-page.scss
@@ -25,6 +25,9 @@
     .address{
         margin: 25px 325px 0 415px;
         display: flex;
+        a{
+            margin-left: 12px;
+        }
     }
     a{
         font-family: 'Ubuntu';
@@ -48,6 +51,9 @@
     }
     header{
         display: flex;
+        a{
+            margin: 0;
+        }
     }
 
 }
