--- a/src/components/productsList/products-list.scss
+++ b/src/components/productsList/products-list.scss
@@ -2,7 +2,8 @@
     display: flex;
     list-style-type: none;
     margin-top: 39px;  
-
+    flex-wrap: wrap;
+    width: 922px;
     .container{
         width: 1280px;
         margin: 0 auto;
@@ -18,9 +19,12 @@
         color: #9CA7B5;
         margin-left: 4px;
     }
-    li, img{
+   img{
         margin-left: 4px;
-      
+         
+    }
+    li{
+        margin-top: 5px;
     }
 
  
