--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -57,8 +57,8 @@ span{
 .btn_sub{
     width: 200px;
     height: 40px;
-    margin-left:  310px;
-    margin-top: 10px;
+    margin-left:  185px;
+    margin-top: 30px;
     background: #FFB701;
     border: none;
     border-radius: 5px;
@@ -123,7 +123,7 @@ span{
     .agree{
         width: 217px;
         height: 42px;
-        margin: 20px 0 0 31px;
+        margin: 20px 0 0 10px;
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 400;
@@ -141,15 +141,14 @@ span{
       }
       
       .input__agree {
- 
+        width: 40px; /* Размер изображения */
+        height: 40px;
         opacity: 0;
         cursor: pointer;
       }
       
       .checkbox-image {
-       
-        top: 0;
-        left: 0;
+        margin-left: 105px;
         width: 40px; /* Размер изображения */
         height: 40px; /* Размер изображения */
         opacity: 0.5;
@@ -171,7 +170,7 @@ span{
      
  
     .inputs{
-        display: flex;
+        display: flex; 
         flex-direction: row;
         justify-content: space-around;
     }
@@ -189,8 +188,7 @@ span{
         display: flex;
         flex-direction: row;
         
-        div{
-            flex-direction: column;
+        div{ 
            
             .number{
                 width: 60px;
